--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Program specific
+resources/
+cache/
+output/
